# PlateRecognition

./: .gitignore  CMakeLists.txt  PlateRecognition
lib/: libqiniu.dylib
resources/ui/: Login.ui  LoginDialog.ui  MainWindow.ui  RecognizeTab.ui  SearchTab.ui  SearchWindow.ui
src/: main.cpp
src/dialogs/: Login.cpp  Login.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  RecognizeTab.cpp  RecognizeTab.h  SearchTab.cpp  SearchTab.h  SearchWindow.cpp  SearchWindow.h
src/model/: PlateModel.cpp  PlateModel.h
src/tools/: DataManager.cpp  DataManager.h  PlateRecognisor.cpp  PlateRecognisor.h  QiniuManager.cpp  QiniuManager.h
src/ui/: ui_Login.h  ui_LoginDialog.h  ui_MainWindow.h  ui_RecognizeTab.h  ui_SearchTab.h  ui_SearchWindow.h
test/: example.cpp  mysql_test.cpp  qiniu_test.cpp
